# Projet-Cpp-S4

./: CMakeLists.txt  main.cpp
controllers/: authcontroller.cpp  authcontroller.h  comptecontroller.cpp  comptecontroller.h  statcontroller.cpp  statcontroller.h
data/: banque.db  banque.db-journal  datamanager.cpp  datamanager.h
models/: banque.cpp  banque.h  client.cpp  client.h  comptebancaire.cpp  comptebancaire.h  pret.cpp  pret.h  transaction.cpp  transaction.h
resources/: style.qss
views/: FenetreOperations.cpp  FenetreOperations.h  FenetreStatsIndividuelles.cpp  FenetreStatsIndividuelles.h  fenetreconnexion.cpp  fenetreconnexion.h  fenetrestatistiques.cpp  fenetrestatistiques.h  fenetretableaubord.cpp  fenetretableaubord.h
views/widgets/: camembertdepenses.cpp  camembertdepenses.h  graphiquesolde.cpp  graphiquesolde.h  indicateursolde.cpp  indicateursolde.h
